--- a/.env
+++ b/.env
@@ -1,11 +1,6 @@
 # AUTH_SECRET=VgHJ0paOK/TqpQayLvyq36qyuKwgicO4Yjtq1z8f3k8=
-AUTH_KEYCLOAK_ID=masspay-frontend
-AUTH_KEYCLOAK_SECRET=XWIqn8DTgHzklzEVjX0SdHQaaneZXaSr
-AUTH_KEYCLOAK_ISSUER=http://localhost:8080/realms/masspay
+AUTH_KEYCLOAK_ID=test-frontend
+AUTH_KEYCLOAK_SECRET=xcvasdfasags
+AUTH_KEYCLOAK_ISSUER=http://localhost:8080/realms/test
 AUTH_URL=http://localhost:3000
-AUTH_SECRET=+dzeDpp6mYmjWeo9+dFmYrt6D3Ii8x7rrf185czFXVmu
-AUTH_TRUST_HOST=true
-
-SESSION_SECRET='fnAD-G3PJ2ACBW2197975a2mIpnS5w-dHIoJ2lrs'
-JWT_SECRET='INp8IvdIyeMcoGAgFGoA61DdBglwwSqnXJZkgz8PSnw'
-JWT_NAME=session_test
+AUTH_SECRET=asgasdfasdfasdf
